# MeanShift

./: .gitattributes  .gitignore  README.md
ClusteringTests/: clustersplot.py  generateDatasets.r  generate_datasets.py  mstest.py  plot_clusters.py  prova.sh  speedupTest.sh  speeduptest
ClusteringTests/datasets/: data1.csv  data10.csv  data11.csv  data12.csv  data13.csv  data14.csv  data15.csv  data2.csv  data3.csv  data4.csv  data5.csv  data6.csv  data7.csv  data8.csv  data9.csv  rand0.csv  rand1.csv  rand2.csv  rand3.csv  randData.csv
MeanShift/: CMakeLists.txt  Cluster.cpp  Cluster.h  Cluster.hpp  ClustersBuilder.cpp  ClustersBuilder.h  ClustersBuilder.hpp  Point.cpp  Point.h  Point.hpp  batchTest.cpp  csvUtils.cpp  csvUtils.hpp  main.cpp  meanShift.cpp  meanShift.h  meanShift.hpp
MeanShift/test/: CMakeLists.txt  ClusterTest.cpp  ClustersBuilderTest.cpp  PointTest.cpp  csvUtilsTest.cpp  meanShiftTest.cpp  runAllTests.cpp  testCluster.csv
MeanShift/test/resources/: out.csv  test.csv
Paper/: MeanShift.tex  PC_course_project_template.tex  cvpr.sty  speedup.eps  speedup_colors.eps
Paper/fig/: speedup100.eps  speedup1000.eps  speedup10000.eps  speedup10000Colors.eps  speedup10b.eps  speedup1b.eps  speedup20000.eps  speedup2b.eps  speedup50000.eps
Slides/: MeanShiftSlides.nav  MeanShiftSlides.tex  MeanShiftSlides.vrb
